<resources>
    <string name="app_name">Connectattoo</string>
    <string name="txt_welcome"><P /> Nos ajude a direcionar sua jornada. <b><font color="#FF000000">Você é um tatuador</font></b> em busca de novos clientes <b> <font color="#FF000000">ou um cliente</font></b> em busca do tatuador ideal?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_confirmation">Verifique seu <b><font color="#FF000000">e-mail</font></b> e confirme sua conta para desbloquear todas as funcionalidades do <b><font color="#FF000000">Connectattoo.</font></b></string>
    <string name="txt_confirmation_title">SUA CONTA ESTÁ QUASE PRONTA!</string>
    <string name="txt_hello_user_home">Olá, %s, </string>
    <string name="txt_hello_user_home_error">Olá, </string>
    <string name="txt_request_location">Serviço de localização desabilitado quer habilitar?</string>
    <string name="txt_enable_now">Habilitar</string>
    <string name="txt_cancel">Cancelar</string>
    <string name="txt_explore">Explorar</string>
    <string name="txt_search">Buscar</string>
    <string name="content_description_user_profile_image">Imagem de perfil do usuário</string>
    <string name="txt_my_interests">Meus Interesses</string>
    <string name="btn_to_manage"><u>Gerenciar</u></string>
    <string name="btn_view_more"><u>Ver mais</u></string>
    <string name="txt_next_scheduling">Próximo agendamento</string>
    <string name="txt_your_next_tattoo_is_coming">Sua próxima tatuagem está chegando</string>
    <string name="content_description_tattoo_artist">Imagem tatuador</string>
    <string name="content_description_btn_calendar">Botão de Calendário</string>
    <string name="content_description_btn_clock">Botão de horário</string>
    <string name="txt_my_galleries">Minhas Galerias</string>
    <string name="content_description_user_settings_button">Botão de configurações do usuário</string>
    <string name="content_description_next_appointment_information_button">Botão de informações sobre proximo agendamento</string>
    <string name="btn_edit_profile">Editar Perfil</string>
    <string name="txt_these_are_the_tattoo_artists_closest_to_you">Estes são os tatuadores mais próximos de você</string>
    <string name="txt_find_inspiration_in_every_detail">Encontre inspiração em cada detalhe</string>
    <string name="txt_your_perfect_tattoo">a sua tatuagem perfeita!</string>
    <string name="icon_more_itens_list">Ver Mais</string>
    <string name="name">Nome</string>
    <string name="txt_edit_profile">Editar Perfil</string>
    <string name="et_user_name">Nome de usuário</string>
    <string name="et_email">Email</string>
    <string name="et_birth_date">Data de Nascimento</string>
    <string name="content_description_client_photo">Foto Cliente</string>
    <string name="txt_editar_foto_do_perfil">Editar foto do perfil</string>
    <string name="txt_choose_from_library">Escolher na biblioteca</string>
    <string name="txt_take_photo">Tirar foto</string>
    <string name="txt_remove_photo">Remover foto atual</string>
    <string name="you_have_denied_permission_for_photos_please_grant_permission_in_settings_to_continue">Você negou as permissões, para continuar você deve permitir em configurações.</string>
    <string name="open_settings">Abrir configurações</string>
    <string name="cancel">Cancelar</string>
    <string name="snack_photo_size_exceeds_5MB">O tamanho da foto excede 5MB</string>
    <string name="snack_please_select_an_image_in_JPEG_JPG_or_PNG_format">Por favor, selecione uma imagem nos formatos JPEG, JPG ou PNG</string>
    <string name="txt_title_filters">Tags</string>
    <string name="txt_types_of_tattoos">Tipos de Tatuagem</string>
    <string name="txt_select_up_to_5_styles">Selecione até 5 estilos</string>
    <string name="btn_filter">Salvar</string>
    <string name="txt_you_cannot_select_more_than_5_tags">"Você não pode selecionar mais do que 5 tags."</string>
    <string name="title_profile_settings">Configurações de Perfil</string>
    <string name="txt_manage_your_account">Gerenciar a sua conta</string>
    <string name="txt_communication">Notificações</string>
    <string name="txt_change_password">Alterar senha</string>
    <string name="txt_delete_account">Deletar conta</string>
    <string name="txt_more_information_and_support">Mais informações e suporte</string>
    <string name="txt_about">Sobre</string>
    <string name="txt_help">Ajuda</string>
    <string name="txt_logout">Terminar sessão</string>
    <string name="txt_swipe_down_to_refresh"><b><font color="#FF000000">Deslizar</font></b> para baixo, para <b><font color="#FF000000">atualizar</font></b>.</string>
    <string name="txt_client">CLIENTE</string>
    <string name="txt_lets_get_started_welcome">VAMOS COMEÇAR, SEJA BEM-VINDO!</string>
    <string name="txt_tattoo_artist">TATUADOR</string>
    <string name="txt_tattoo_artist_distance">Tatuador há %s Km de distância</string>
    <string name="btn_send_message">Enviar mensagem</string>
    <string name="btn_see_full_profile">Ver Perfil Completo</string>
    <string name="txt_default_loading_text">Carregando...</string>
    <string name="txt_this_may_take_a_few_seconds">Isso pode demorar alguns segundos</string>
    <string name="phrase_loading_your_next_masterpiece_on_your_skin">Carregando sua próxima obra-prima na pele...</string>
    <string name="phrase_preparing_the_inks_and_the_inspiration">Preparando as tintas e a inspiração...</string>
    <string name="phrase_please_wait_while_we_customize_your_next_expression_mark">Aguarde enquanto customizamos sua próxima marca de expressão...</string>
    <string name="phrase_transforming_your_ideas_into_art">Transformando suas ideias em arte!</string>
    <string name="phrase_the_wait_is_worth_it_your_new_tattoo_is_on_its_way">A espera vale a pena: sua nova tatuagem está chegando!</string>
    <string name="phrase_loading_because_great_artworks_take_time">Carregando... porque grandes obras de arte levam tempo.</string>
    <string name="phrase_coming_soon_your_story_will_gain_a_new_chapter_on_your_skin">Em breve: sua história ganhará um novo capítulo na pele.</string>
    <string name="phrase_loading_because_perfection_demands_patience">Carregando... porque a perfeição demanda paciência.</string>
    <string name="phrase_getting_ready_to_make_history_on_your_skin">Preparando-se para fazer história na sua pele.</string>
    <string name="phrase_loading_because_every_detail_is_important_to_us_and_to_you">Carregando... porque cada detalhe é importante para nós e para você.</string>
    <string name="txt_next_schedule">Próximo evento</string>
    <string name="txt_most_recent_conversations">Conversas mais recentes</string>
    <string name="txt_next_on_your_agenda">Próximo na sua agenda</string>
    <string name="txt_date">Data: </string>
    <string name="txt_time">Horário: </string>
</resources>