<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.tattooclient.TattooClientProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:background="@drawable/bg_shape_tattoo_client_profile_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/btnUserImage"
            android:layout_width="120dp"
            android:padding="@dimen/padding_2dp"
            android:layout_height="120dp"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginVertical="@dimen/margin_16dp"
            android:background="@drawable/circular_image_user_profile"
            android:contentDescription="@string/content_description_user_profile_image"
            android:src="@drawable/icon_person_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway_extrabold"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_18sp"
            app:layout_constraintStart_toEndOf="@+id/btnUserImage"
            app:layout_constraintTop_toTopOf="@+id/btnUserImage"
            tools:text="João Silva" />

        <TextView
            android:id="@+id/txtAgeAndName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:fontFamily="@font/raleway_regular"
            android:maxWidth="190dp"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_11sp"
            app:layout_constraintStart_toStartOf="@+id/txtNameUser"
            app:layout_constraintTop_toBottomOf="@+id/txtNameUser"
            tools:text="32 Anos | @joaosilva@gmail.comaaaaaaaaaaaaaaaaa" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:backgroundTint="@color/purple500"
            android:contentDescription="@string/content_description_user_settings_button"
            android:src="@drawable/icon_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnUserImage" />

        <Button
            android:id="@+id/btnEditProfile"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-10dp"
            android:fontFamily="@font/raleway_extrabold"
            android:padding="0dp"
            android:text="@string/btn_edit_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_12sp"
            app:layout_constraintStart_toStartOf="@+id/txtAgeAndName"
            app:layout_constraintTop_toBottomOf="@+id/txtAgeAndName" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtMyInterests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:fontFamily="@font/raleway_extrabold"
        android:text="@string/txt_my_interests"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/btnManageInterests"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_13dp"
        android:fontFamily="@font/raleway_regular"
        android:padding="0dp"
        android:soundEffectsEnabled="true"
        android:text="@string/btn_to_manage"
        android:textColor="@color/black500"
        android:textSize="@dimen/txt_size_11sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtMyInterests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtMyInterests" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTagsInterests"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:orientation="horizontal"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMyInterests"
        tools:listitem="@layout/item_tags_my_interests" />

    <TextView
        android:id="@+id/txtNextAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:fontFamily="@font/raleway_extrabold"
        android:text="@string/txt_next_scheduling"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_size_14sp"
        app:layout_constraintStart_toStartOf="@+id/rvTagsInterests"
        app:layout_constraintTop_toBottomOf="@+id/rvTagsInterests" />

    <Button
        android:id="@+id/btnManageNextAppointment"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_13dp"
        android:fontFamily="@font/raleway_regular"
        android:padding="0dp"
        android:soundEffectsEnabled="true"
        android:text="@string/btn_view_more"
        android:textColor="@color/black500"
        android:textSize="@dimen/txt_size_11sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtNextAppointment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtNextAppointment" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:backgroundTint="@color/purple100"
        app:cardCornerRadius="@dimen/margin_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnManageNextAppointment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/txtNewTattoo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:fontFamily="@font/raleway_regular"
                android:text="@string/txt_your_next_tattoo_is_coming"
                android:textColor="@color/purple800"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnMoreInfoNextScheduling"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/purple100"
                android:contentDescription="@string/content_description_next_appointment_information_button"
                android:src="@drawable/icon_info"
                app:layout_constraintBottom_toBottomOf="@+id/txtNewTattoo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtNewTattoo" />

            <ImageView
                android:id="@+id/ivImageTattooArtist"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:padding="@dimen/padding_2dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                android:background="@drawable/circular_image_user_profile_border_purple"
                android:contentDescription="@string/content_description_tattoo_artist"
                android:src="@drawable/icon_person_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNewTattoo" />

            <TextView
                android:id="@+id/txtNameTattooArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:fontFamily="@font/raleway_extrabold"
                android:textColor="@color/purple500"
                app:layout_constraintStart_toEndOf="@+id/ivImageTattooArtist"
                app:layout_constraintTop_toTopOf="@+id/ivImageTattooArtist"
                tools:text="Larissa Diniz" />

            <TextView
                android:id="@+id/txtTattoArtistProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_regular"
                android:text="@lari_tattoo"
                android:textColor="@color/purple900"
                app:layout_constraintBottom_toBottomOf="@+id/ivImageTattooArtist"
                app:layout_constraintStart_toStartOf="@+id/txtNameTattooArtist"
                app:layout_constraintTop_toBottomOf="@+id/txtNameTattooArtist" />

            <ImageButton
                android:id="@+id/btnCalendar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:backgroundTint="@color/purple100"
                android:contentDescription="@string/content_description_btn_calendar"
                android:src="@drawable/icon_calendar"
                app:layout_constraintBottom_toBottomOf="@+id/txtTattoArtistProfile"
                app:layout_constraintStart_toEndOf="@+id/txtNameTattooArtist"
                app:layout_constraintTop_toTopOf="@+id/txtNameTattooArtist"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/txtScheduleTomorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_extrabold"
                tools:text="Amanhã"
                android:textColor="@color/purple500"
                app:layout_constraintBottom_toBottomOf="@+id/btnCalendar"
                app:layout_constraintStart_toEndOf="@+id/btnCalendar"
                app:layout_constraintTop_toTopOf="@+id/btnCalendar" />

            <ImageButton
                android:id="@+id/btn_clock"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:backgroundTint="@color/purple100"
                android:contentDescription="@string/content_description_btn_clock"
                android:src="@drawable/icon_clock"
                app:layout_constraintBottom_toBottomOf="@+id/txtScheduleTomorrow"
                app:layout_constraintStart_toEndOf="@+id/txtScheduleTomorrow"
                app:layout_constraintTop_toTopOf="@+id/txtScheduleTomorrow"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/txtScheduleHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_extrabold"
                android:textColor="@color/purple500"
                app:layout_constraintBottom_toBottomOf="@+id/btn_clock"
                app:layout_constraintStart_toEndOf="@+id/btn_clock"
                app:layout_constraintTop_toTopOf="@+id/btn_clock"
                tools:text="11:30" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtMyGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:fontFamily="@font/raleway_extrabold"
        android:text="@string/txt_my_galleries"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/btnManageGallery"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_13dp"
        android:fontFamily="@font/raleway_regular"
        android:padding="0dp"
        android:soundEffectsEnabled="true"
        android:text="@string/btn_to_manage"
        android:textColor="@color/black500"
        android:textSize="@dimen/txt_size_11sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtMyGallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtMyGallery" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_my_galleries"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMyGallery"
        app:spanCount="2"
        tools:listitem="@layout/item_my_gallery" />


</androidx.constraintlayout.widget.ConstraintLayout>