<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.tattoclientditprofile.TattooClientEditProfileFragment">


    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        android:src="@drawable/arrow_chevron_left"
        app:layout_constraintEnd_toStartOf="@+id/txt_edit_profile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_extrabold"
        android:text="@string/txt_title_filters"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_size_20sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
        app:layout_constraintEnd_toStartOf="@+id/iv_logo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_back"
        app:layout_constraintTop_toTopOf="@+id/iv_back" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:importantForAccessibility="no"
        android:src="@drawable/header_logo_symbol"
        app:layout_constraintBottom_toBottomOf="@+id/txt_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_edit_profile"
        app:layout_constraintTop_toTopOf="@+id/txt_edit_profile" />

    <TextView
        android:id="@+id/txt_Types_of_tattoos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/raleway_extrabold"
        android:text="@string/txt_types_of_tattoos"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />

    <TextView
        android:id="@+id/txtUpToStyles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/txt_select_up_to_5_styles"
        android:textColor="@color/black500"
        android:textSize="@dimen/txt_size_11sp"
        app:layout_constraintStart_toStartOf="@+id/txt_Types_of_tattoos"
        app:layout_constraintTop_toBottomOf="@+id/txt_Types_of_tattoos" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTagsInterests"
        android:layout_width="0dp"
        android:layout_height="440dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUpToStyles"
        tools:listitem="@layout/item_tags_my_interests" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_cancel_button"
        android:text="@string/btn_filter"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:textColor="@color/deepPurple"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvTagsInterests" />


</androidx.constraintlayout.widget.ConstraintLayout>